# DailyPronunciation

./: README.md
src_ai/: README.md  WordMatching.py  requirements.txt
src_telegram/: Cargo.toml  base64.txt  ux_telegram_bot.drawio
src_telegram/src/: ai.rs  main.rs
