[package]
name = "DailyPronunciationBot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.12", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.4"
reqwest = "0.11.18"
base64 = "0.21.2"
serde = { version = "1.0.178", features = ["derive"] }
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
ansi_term = "0.12.1"